--- a/wp-content/themes/subareva/package.json
+++ b/wp-content/themes/subareva/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel index.html --open",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,7 @@
   },
   "homepage": "https://github.com/Smolanov-Serhii/berry.front-end-dev.com.ua#readme",
   "dependencies": {
+    "@babel/core": "^7.21.8",
     "browser-sync": "^2.27.10",
     "del": "^6.1.1",
     "gulp": "^4.0.2",
@@ -28,9 +31,20 @@
     "gulp-uglify": "^3.0.2",
     "sass": "^1.53.0",
     "swiper": "^8.4.4",
-    "type": "module"
+    "type": "module",
+    "parcel-bundler": "^1.6.1",
+    "three": "0.146.0"
+  },
+  "resolutions": {
+    "@babel/preset-env": "7.13.8"
   },
   "devDependencies": {
-    "gulp-webp": "^4.0.1"
-  }
+    "gulp-webp": "^4.0.1",
+    "@babel/core": "7.2.0",
+    "typescript": "4.4.4"
+  },
+  "keywords": [
+    "javascript",
+    "starter"
+  ]
 }
